tests/baselines/reference/promiseAllOnAny01.errors.txt
tests/cases/compiler/promiseAllOnAny01.ts(3,9): error TS2740: Type '{ [x: string]: any; }' is missing the following properties from type 'any[]': length, pop, push, concat, and 16 more.


==== tests/cases/compiler/promiseAllOnAny01.ts (1 errors) ====
    async function foo(x: any) {
        let abc = await Promise.all(x);
        let result: any[] = abc;
            ~~~~~~
!!! error TS2740: Type '{ [x: string]: any; }' is missing the following properties from type 'any[]': length, pop, push, concat, and 16 more.
        return result;
    }